# v0-crime-awareness-web-app

./: .env.local.example  .gitignore  CONVEX_SETUP.md  MIGRATION_SUMMARY.md  README.md  convex.json  convexdata.json  package-lock.json  package.json  pnpm-lock.yaml
.agents/context/: README.md  product-context.md  progress.md  project-brief.md  project-overview.md  project-structure.md  project-style-guide.md  project-vision.md  system-patterns.md  tech-context.md
.agents/templates/: prd-template.md  task-template.md
.cursor/plans/: d-7c470b34.plan.md
app/: globals.css  layout.tsx  page.tsx
app/map/: page.tsx
backend/: README.md  main.py  pyproject.toml
backend/data/: wanted_persons.json
backend/data/2025-10-18/: 2025-10-19T00_28_31.787Z.json
backend/src/api/: __init__.py  chat.py  reports.py  wanted_persons.py
backend/src/core/: __init__.py  env.py  logging.py  settings.py
backend/src/models/: __init__.py  chat_session.py  wanted_person.py
backend/src/services/: __init__.py  activity_collector.py  chat_orchestrator.py  email_sender.py  report_generator.py  wanted_persons_scraper.py  wanted_persons_storage.py
backend/src/tests/: test_wanted_persons_scraper.py
backend/tests/: test_chat_api.py  test_chat_orchestrator.py  test_wanted_persons_api.py
components/: criminal-selector.tsx  navigation.tsx
convex/: crimeReports.ts  criminals.ts  geocoding.ts  schema.ts
frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: seed.ts
(+61 files in other folders)
