[project]
name = "informa"
version = "0.1.0"
description = "Wanted persons service powered by FastAPI and Firecrawl"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.112.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "firecrawl-py>=4.3.6",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.2.0",
    "convex>=0.5.0",
    "dspy-ai>=2.5.0",
    "resend>=2.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
